--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        {% include 'simple_nav.html.twig' %}
     </body>
 </html>
