--- a/templates/simple_nav.html.twig
+++ b/templates/simple_nav.html.twig
@@ -2,5 +2,5 @@
 <br />
 <hr />
 <div>
-    <a href="{{ path('app_home') }}">Home</a> | <a href="{{ path('app_login') }}">Login</a> | <a href="{{ path('app_logout') }}">Logout</a> | <a href="{{ path('project_list') }}">Projects</a> | <a href="{{ path('timelog_list') }}">Time Log</a>
+    <a href="{{ path('app_home') }}">Home</a> | <a href="{{ path('app_login') }}">Login</a> | <a href="{{ path('app_logout') }}">Logout</a> | <a href="{{ path('project_list') }}">Projects</a> | <a href="{{ path('timelog_list') }}">Time Log</a> | <a href="{{ path('generate_report') }}">Time Report</a> | <a href="{{ path('generate_csv_report') }}">Download CSV Report</a>
 </div>
